[package]
name = "wasm_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12" # For potentially reading project-specific config files
walkdir = "2.5.0" # For traversing directories to find project files
# Add other dependencies as needed
